2004-05-15  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/diagram.cpp (loadIndepVarData): Fixed typo
	in error message.

	* qucs_de.ts: Updated german translation.

	* qucs.cpp (QucsApp): Fixed Qucs file filter description.

2004-05-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* markers show more-dimensional data correct
	* cursor up/down key moves selected markers
	* outsourced toggle actions into class "QucsActions"
	* fixed bug in tabdiagram (more-dimensional display)

2004-05-10  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed a few bugs with the graph handling
	* the graph line is now saved within "..."

2004-05-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug after placing diagram dialog
	* fixed bug in scaling smith chart graphes
	* diagrams can show graph with multiple dimensions

2004-05-07  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (TRANSLATIONS): Added romanian translation file.

2004-05-01  Stefan Jahn  <stefan@lkcc.org>

	* qucs_it.ts: Applied changes made by Gorgio.  Thanks.

2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* strongly improved save as function
	* outsourced the initialization of QucsApp into QucsInit
	* polar diagrams correctly fit negative values
	* rectangle diagrams can show data containing only one point
	* fixed bug in component dialog (add property)
	* improved marker handling
	* "graphictext" can be rotated

2004-04-26  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/Makefile.am (PIC): Added 'mathfunc.html' and
	'contab.png' files to be installable files.

2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* added document for equation functions in help system
	* markers an graphs (marker.cpp/.h): pointer can be moved
	with cursor left/right

2004-04-16  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* small drawings at the mouse cursor to show the active
	action
