@@ -1,3 +1,14 @@
+2004-05-19  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>
+
+	* qucsview.cpp (MPressRotate): Fixed possible cause of
+	segfault.
+	(MReleasePaste): Fixed segfault reason when the re-inserted wire
+	gets deleted.
+
+	* qucsdoc.cpp (insertWire): Run oneLabel() only if the wire has
+	not been deleted in this function.  Fixes segfault of GUI.
+	(deleteWire): Fixed apparent typo which lead to segfault.
+
 2004-05-15  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>
 
 	* diagrams/diagram.cpp (loadIndepVarData): Fixed typo
